Make sure page content doesn't get hidden behind translate button

--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  padding: $small-spacing;
+  padding: $small-spacing $small-spacing $base-spacing * 3;
 }
 
 .site-header {
